[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "openai>=1.90.0",
    "trafilatura>=2.0.0",
    "pyttsx3>=2.98",
    "feedparser>=6.0.11",
    "gtts>=2.5.4",
    "asyncio>=3.4.3",
    "websockets>=15.0.1",
    "praw>=7.8.1",
]
